<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSE help</string>
    <string name="menu_errase">errase</string>
    <string name="settings">Settings</string>
    <string name="Name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
	<string name="to_tired">to tired</string>
    
    <!-- Titles -->
    <string name="title_dice">chose a Dice</string>
    <string name="title_play">Play</string>
    <string name="title_choose_hero">choose your hero</string>

    <!-- Perso -->
    <string name="menu_new_personnage">add Hero</string>
    <string name="heroes">Heroes</string>
    <string name="STR_KA">force</string>
    <string name="STR_GK">agility</string>
    <string name="STR_GW">speed</string>
    <string name="STR_SZ">astuteness</string>
    <string name="STR_CH">charisma</string>
    <string name="STR_SS">acuity</string>
    <string name="STR_KB">physique</string>
    <string name="STR_AU">stamina</string>
    <string name="STR_WI">will</string>
    <string name="STR_MA">magic</string>


    <!-- Role -->
    <string name="role_fighter">fighter</string>
    <string name="role_description_fighter">fighter</string>
    <string name="role_ranger">ranger</string>
    <string name="role_description_ranger">ranger</string>

    <!-- Play -->
    <string name="play">Start</string>
    <string name="modif">modif</string>
    <string name="act">act</string>
    <string name="react">react</string>
    <string name="takehit">hit</string>
    <string name="health">health</string> 
    <string name="stamina">stamina</string>
    <string name="next_round">next round</string>

    <!-- Play:-menu -->
    <string name="weapon">weapon</string>
    <string name="actions">actions</string>
    <string name="weapon_right">right weapon</string>
    <string name="weapon_left">left weapon</string>
    <string name="backpack">backpack</string>

    <!-- Arsenal -->
    <string name="arsenal">arsenal</string>
    <string name="menu_new_weapon">add Weapon</string>


    <string name="plus">+</string>
    <string name="addDice">add dice</string>
    <string name="removeDice">remove dice</string>
    <string name="other">other</string>
    <string name="head">head</string>
    <string name="chest">chest</string>
    <string name="arms">arms</string>
    <string name="legs">legs</string>
    <string name="left_arm">Left Arm</string>
    <string name="chose_weapon">change weapon</string>
    <string name="change_type">Change type</string>
    <string name="attribute">Attribute</string>
    <string name="save">save</string>
    <string name="chose_action">action</string>
    <string name="remove">remove</string>
    <string name="now">now:</string>
    <string name="fill">fill</string>
    <string name="empty">empty</string>
    <string name="used">used:</string>
    <string name="set_to_std">compute</string>
    <string name="max">max:</string>
    <string name="bodypart_head">head</string>
    <string name="bodypart_chest">chest</string>
    <string name="bodypart_arms">arms</string>
    <string name="bodypart_legs">legs</string>
    <string name="weight">weight</string>
    <string name="weigth_libra">libra</string>
    <string name="weight_ounce">ounce</string>
    <string name="weight_explanation">The weights are given in libra and ounces. Twelve ounces make one libra. (Three libra make about one kilo)</string>
    <string name="weight_ounces">ounces</string>
    <string name="weight_libras">libras</string>
    <string name="menu_new_armor">add armor</string>
    <string name="bodypart">bodypart</string>
    <string name="protection">protection</string>
    <string name="equiped">equiped</string>
    <string name="armor">armor</string>
    <string name="human">human</string>
    <string name="garan">Garan</string>
    <string name="lemur">lemur</string>
    <string name="pfeilor">Pfeilor</string>
    <string name="race">race</string>
    <string name="weather_protection">weather protection</string>
    <string name="right_arm">right arm</string>
    <string name="equipement">equipement</string>
    <string name="base">base</string>
    <string name="mouvement">movement</string>
    <string name="malus">malus</string>
    <string name="mental_neutral">neutral</string>

    <string name="agressive">agressive</string>
    <string name="frenetic">brutal</string>
    <string name="berserk" translatable="false">berserker</string>
    <string name="concentrated">concentrated</string>
    <string name="immersed">immersed</string>
    <string name="ecstasy">ecstasy</string>
    <string name="delirium">delirium</string>
    <string name="fear">fear</string>
    <string name="focused">focused</string>
    <string name="metaphase" translatable="false">metaphase</string>
    <string name="SYNESTHESIA">synesthesia</string>
    <string name="shock">shock</string>
    <string name="talents">talents</string>
    <string name="base_fatigue">base fatigue</string>
    <string name="reset_mental">reset mental</string>
    <string name="show_dice_eyes">Dice values</string>
    <string name="left_hand">left hand</string>
    <string name="right_hand">right hand</string>
    <string name="foots">foots</string>
    <string name="split">split</string>
    <string name="rest">rest</string>
    <string name="both_hands">both hands</string>
    <string name="combine">combine</string>
    <string name="main_weapon">main weapon</string>
    <string name="weapon_saved">weapon saved</string>
    <string name="weapon_created">weapon created</string>
    <string name="armor_saved">armor saved</string>
    <string name="armor_created">armor created</string>
    <string name="hero_created">hero created</string>
    <string name="hero_saved">hero saved</string>
    <string name="value">value</string>
    <string name="type">type</string>
    <string name="variable">variable</string>
    <string name="enhancer">enhancer</string>
    <string name="talent">talent</string>
    <string name="modif_dialog_title">Talents and Equipment influence</string>
    <string name="skill">skill</string>


    <!-- Actions -->
    <string name="action_steal">steal</string>
    <string name="talent_steal_description">stealing handbags</string>
    <string name="action_conjure">conjure</string>
    <string name="talent_conjure_description">conjure</string>
    <string name="action_make_fire">make fire</string>
    <string name="talent_makefire_description">make fire</string>
    <string name="action_cook">cooking</string>
    <string name="talent_cook_description">cooking</string>
    <string name="action_butcher">butchering</string>
    <string name="talent_butcher_description">butchering</string>
    <string name="action_fishing">fishing</string>
    <string name="talent_fishing_description">fishing</string>
    <string name="action_climb">climb</string>
    <string name="talent_climb_description">climb</string>
    <string name="action_swim">swim</string>
    <string name="talent_swim_description">swim</string>
    <string name="action_throw">throw</string>
    <string name="talent_throw_description">throw</string>
    <string name="action_make_music">make music</string>
    <string name="talent_make_music_description">make music</string>
    <string name="action_sing">sing</string>
    <string name="talent_sing_description">sing</string>

    <string name="action_defend">defend</string>
    <string name="action_keep_distance">keep distance</string>
    <string name="action_move">move</string>
    <string name="action_attack">attack</string>
    <string name="action_esquiv">esquiv</string>
    <string name="action_fight">fight</string>
    <string name="action_run">run</string>
    <string name="action_shoot">shoot</string>
    <string name="action_two_hand_attack">twohanded attack</string>
    <string name="action_load">load</string>

    <string name="action_cold_sleep">sleep outside</string>
    <string name="action_fill_mana">fill mana</string>


    <!-- Talents -->
    <string name="talent_endurance">endurance</string>
    <string name="talent_endurance_description">endurance</string>
    <string name="talent_fury">fury</string>
    <string name="talent_fury_description">fury</string>
    <string name="talent_twohand_destroyer">Two Hand Destroyer</string>
    <string name="talent_twohand_destroyer_description">Two Hand Destroyer</string>
    <string name="talent_two_sword_dance">two sword dance</string>
    <string name="talent_two_sword_dance_description">two sword dance</string>
    <string name="talent_pole_master">pole master</string>
    <string name="talent_pole_master_description">pole master</string>
    <string name="talent_health_description">health</string>


    <string name="talent_keep_distance">keep distance</string>
    <string name="talent_combat">combat</string>

    <!-- Weapon type -->
    <string name="sword">sword</string>
    <string name="bare_hands">bare hand</string>
    <string name="two_swords">two swords</string>
    <string name="pole_weapon">pole weapon</string>
    <string name="bear_hands">bear hands</string>
    <string name="one_a_half_sword">long sword</string>
    <string name="range_weapon">range weapon</string>
    <string name="shield">shield</string>

    <string name="mana_weapon">mana weapon</string>

    <!-- Weapon/Action Attributes -->
    <string name="penetration">penetration</string>
    <string name="result_damage">damage</string>
    <string name="twohanded">twohanded sword</string>
    <string name="fatigue">fatigue</string>
    <string name="role">role</string>
    <string name="connection">connection</string>
    <string name="text_connection">test connection</string>
    <string name="arm_shield">arm shield</string>
    <string name="spell">spel</string>
    <string name="connect">connect</string>
    <string name="longsword">longsword</string>
    <string name="dague">dague</string>
    <string name="axe">axe</string>
    <string name="masse">mace</string>
    <string name="crossbow">crossbow</string>
    <string name="bow">bow</string>
    <string name="ticks">ticks</string>
</resources>