<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_KA"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_KA"
        android:textOn="@string/STR_KA" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_GK"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_GK"
        android:textOn="@string/STR_GK" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_GW"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_GW"
        android:textOn="@string/STR_GW" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_SZ"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_SZ"
        android:textOn="@string/STR_SZ" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_CH"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_CH"
        android:textOn="@string/STR_CH" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_SS"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_SS"
        android:textOn="@string/STR_SS" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_KB"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_KB"
        android:textOn="@string/STR_KB" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_AU"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_AU"
        android:textOn="@string/STR_AU" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_WI"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_WI"
        android:textOn="@string/STR_WI" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/KEY_MA"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/checkperg"
        android:textOff="@string/STR_MA"
        android:textOn="@string/STR_MA" />
    </LinearLayout>
</ScrollView>