<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="@dimen/view_padding"
            android:text="@string/now" />

        <ch.yannick.display.views.ValueControler
            android:id="@+id/stamina_now"
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            app:lower_bound="0" />

        <Button
            android:id="@+id/now_fill"
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:padding="@dimen/view_padding"
            android:text="@string/fill" />

        <Button
            android:id="@+id/now_empty"
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:padding="@dimen/view_padding"
            android:text="@string/empty" />



        <TextView
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:padding="@dimen/view_padding"
            android:text="@string/max" />

        <ch.yannick.display.views.ValueControler
            android:id="@+id/stamina_max"
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            app:lower_bound="0" />

        <Button
            android:id="@+id/max_compute"
            style="@style/BaseTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:padding="@dimen/view_padding"
            android:text="@string/set_to_std" />
    </GridLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
