<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RootApplication" >


    <Button
        android:id="@+id/play"
        style="@style/BaseButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:onClick="startGame"
        android:text="@string/play" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_padding"
        android:layout_height="wrap_content">
        <TextView
            style="@style/BaseTextWhite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/heroes"
            android:background="@color/brown"
            />
        <LinearLayout
            android:background="@drawable/brown_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/heroes"
                android:padding="@dimen/view_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startHeroes"
                android:text="@string/heroes" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_padding"
        android:layout_height="wrap_content">
        <TextView
            style="@style/BaseTextWhite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            android:background="@color/brown"
            />
        <LinearLayout
            android:background="@drawable/brown_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/test_connection"
                android:padding="@dimen/view_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="testConnection"
                android:text="@string/connect" />
        </LinearLayout>
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/arsenal"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_padding"
        android:layout_height="wrap_content">
        <TextView
            style="@style/BaseTextWhite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/arsenal"
            android:background="@color/brown"
            />
        <LinearLayout
            android:background="@drawable/brown_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:onClick="startArsenal"
            android:text="@string/weapon" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:onClick="startArmors"
            android:text="@string/armor" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>