<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/view_padding"
    tools:context=".RootApplication">

    <TextView
        android:id="@+id/nom_armor"
        style="@style/BigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding">
        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/view_padding"
            android:text="@string/bodypart"/>
        <Button
            android:id="@+id/bodypart"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding">
        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/view_padding"
            android:text="@string/protection"/>
        <ch.yannick.display.views.ValueControler
            android:id="@+id/protection"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding">
        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/view_padding"
            android:text="@string/weather_protection"/>
        <ch.yannick.display.views.ValueControler
            android:id="@+id/wheater_protection"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"/>
    </LinearLayout>





    <Button
        android:id="@+id/weight"
        style= "@style/BaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text ="@string/weight"/>
    <ch.yannick.display.views.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ch.yannick.display.views.ValueControler
                android:id="@+id/libras"
                style= "@style/BaseTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/view_padding"
                app:lower_bound="0"/>
            <TextView
                style= "@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/view_padding"
                android:paddingRight="@dimen/view_padding"
                android:text ="@string/weight_libras"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ch.yannick.display.views.ValueControler
                android:id="@+id/ounces"
                style= "@style/BaseTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/view_padding"
                app:lower_bound="0"
                app:upper_bound="11"/>
            <TextView
                style= "@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/view_padding"
                android:paddingRight="@dimen/view_padding"
                android:text ="@string/weight_ounces"/>
        </LinearLayout>
        </ch.yannick.display.views.FlowLayout>
</LinearLayout>